Send MouseMove when a mouse capture is released across OOPIF boundary

When the user holds the mouse down over an OOPIF, that OOPIF
captures all mouse inputs, including if the user moves the mouse out of
the OOPIF's boundaries.

A consequence of this is that when the user releases the mouse button,
only the OOPIF sees that, and the frame that the mouse is now over does
not see any mouse events. A consequence of this is that the mouse cursor
will not be updated following a MouseUp.

This CL artifically creates a MouseMove as a result of the
capture-releasing MouseUp in order to trigger any necessary cursor
update.

Bug: 893101
Change-Id: Ib6572149dd1841c9774997928d2afeb158feb757
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1773758
Reviewed-by: Navid Zolghadr <nzolghadr@chromium.org>
Commit-Queue: Ken Buchanan <kenrb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#693342}

Former-commit-id: b3f95697005bf098401219e60f47db7c7c594426